@@ -35,6 +35,7 @@ import java.nio.ByteBuffer;
 import java.time.LocalDate;
 import java.time.LocalTime;
 import java.util.Arrays;
+import java.util.HashSet;
 import java.util.UUID;
 import java.util.stream.Stream;
 import org.junit.jupiter.params.ParameterizedTest;
@@ -337,7 +338,10 @@ public class ValueCodecTest {
         arguments(Type.List.of(Type.Varchar), Values.of()),
         arguments(
             Type.List.of(Type.Varchar), Values.of(Values.of("a"), Values.of("b"), Values.of("c"))),
-        arguments(Type.List.of(Type.Int), Values.of(Values.of(1), Values.of(2), Values.of(3))));
+        arguments(Type.List.of(Type.Int), Values.of(Values.of(1), Values.of(2), Values.of(3))),
+        arguments(
+            Type.List.of(Type.Int),
+            Values.of(Arrays.asList(Values.of(1), Values.of(2), Values.of(3)))));
   }
 
   public static Stream<Arguments> invalidListValues() {
@@ -361,7 +365,17 @@ public class ValueCodecTest {
     return Stream.of(
         arguments(Type.Set.of(Type.Varchar), Values.of()),
         arguments(
-            Type.Set.of(Type.Varchar), Values.of(Values.of("a"), Values.of("b"), Values.of("c"))));
+            Type.Set.of(Type.Varchar), Values.of(Values.of("a"), Values.of("b"), Values.of("c"))),
+        arguments(
+            Type.Set.of(Type.Varchar),
+            Values.of(
+                new HashSet<Value>() {
+                  {
+                    add(Values.of("a"));
+                    add(Values.of("b"));
+                    add(Values.of("c"));
+                  }
+                })));
   }
 
   public static Stream<Arguments> invalidSetValues() {
